hphp/hack/test/typecheck/immutable_binding/immutable_catch_scope_3.php.exp
File "immutable_catch_scope_3.php", line 14, characters 10-10:
Unbound name: a (a global constant) (Naming[2049])
